test/tests/operators/to_http/retry_connection_error.txt
warning: connection error (folly::AsyncSocketException: AsyncSocketException: connect failed, type = Socket not open, errno = 111 (Connection refused)), attempt 1/3, retrying after 1s
 --> tests/operators/to_http/retry_connection_error.tql:9:1
  |
9 | to_http "http://127.0.0.1:9/retry-connection-error",
  | ~~~~~~~ 
  |

warning: connection error (folly::AsyncSocketException: AsyncSocketException: connect failed, type = Socket not open, errno = 111 (Connection refused)), attempt 2/3, retrying after 2s
 --> tests/operators/to_http/retry_connection_error.tql:9:1
  |
9 | to_http "http://127.0.0.1:9/retry-connection-error",
  | ~~~~~~~ 
  |

error: HTTP request to `http://127.0.0.1:9/retry-connection-error` failed: folly::AsyncSocketException: AsyncSocketException: connect failed, type = Socket not open, errno = 111 (Connection refused)
 --> tests/operators/to_http/retry_connection_error.tql:9:1
  |
9 | to_http "http://127.0.0.1:9/retry-connection-error",
  | ^^^^^^^ 
  |
